fixed padding issue on mobile view

--- a/style/index.css
+++ b/style/index.css
@@ -348,7 +348,7 @@ figcaption:hover{
     }
     
     .thumbnail-container{
-        padding-bottom: 65%;
+        padding-bottom: 50%;
     }
 
     figcaption{
